--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,23 @@ hr {
 .nav-link {
     font-size: 1.1em !important;
 }
+.fa-stack[data-count]:after{
+    position:absolute;
+    right:0%;
+    top:1%;
+    content: attr(data-count);
+    font-size:50%;
+    padding:.6em;
+    border-radius:999px;
+    line-height:.75em;
+    color: white;
+    background:rgba(255,0,0,.85);
+    text-align:center;
+    min-width:2em;
+    font-weight:bold;
+}
+
+
 .slide1 {
     background: url("../img/remont_pc.png");
     background-size: cover;
