--- a/css/main.css
+++ b/css/main.css
@@ -113,15 +113,24 @@ hr {
 .categoryMain {
     font-size: 3em;
     padding: 0;
+    display: flex;
+    align-items: start;
+    justify-content: center;
+}
+.categoryMain .fa-circle {
+    color: white;
+    text-shadow: 0px 0px 6px #ccc;
+}
+.fa-stack:hover .fa-circle {
+    color: #0398db;
+    text-shadow: 0px 0px 6px #ccc;
 }
 .categoryMainPrint {
     color: white;
 }
+
 .fa-stack:hover .fa-print {
     color: white;
-}
-.fa-stack:hover .fa-circle {
-    color: red;
 }
 
 @media (min-width: 768px) {
