--- a/css/main.css
+++ b/css/main.css
@@ -209,7 +209,8 @@ figure p {
 .podval h6 {
     text-align: center;
     font-size: 0.8em;
-    color: black;
+    color: white;
+    font-weight: normal;
 }
 .podval p {
     padding: 0;
@@ -218,6 +219,11 @@ figure p {
 }
 .podval a {
     color: white;
+    text-decoration: underline;
+}
+.podval a:hover {
+    color: black;
+    text-decoration: none;
 }
 .podval .priziv {
     padding-bottom: 80px;
@@ -233,7 +239,10 @@ figure p {
     background-color: transparent;
     color: #ffc107;
     border-color: #ffc107;
-
+}
+.podval i {
+    font-size: 0.8em;
+    padding-right: 10px;
 }
 /*Изменение элементов при изменении масштаба страницы*/
 @media (max-width: 1200px) {
