--- a/css/main.css
+++ b/css/main.css
@@ -183,6 +183,9 @@ figure p {
     color: #0398db;
 }
 /*Блок быстрый поиск*/
+.fastSearch table {
+    margin: 0 auto;
+}
 .fastSearch thead {
     background-color: #0398db;
     color: white;
@@ -208,6 +211,7 @@ figure p {
 }
 .podval h5 {
     color: white;
+    padding-top: 10px;
     padding-bottom: 10px;
 }
 .podval h6 {
@@ -248,6 +252,10 @@ figure p {
     font-size: 0.8em;
     padding-right: 10px;
 }
+.podval .text-center p {
+    text-align: left;
+    padding-left: 20px;
+}
 /*Изменение элементов при изменении масштаба страницы*/
 @media (max-width: 1200px) {
     .categoryMain {
@@ -257,5 +265,10 @@ figure p {
 @media (max-width: 1200px) {
     .menus {
         height: 30px;
+    }
+}
+@media (max-width: 994px) {
+    .categoryMainCaption {
+        font-size: 0.3em;
     }
 }
