--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,34 @@
-/* например, сделаем гибкими только те изображения, которые расположены в элементе с классом main */
-
+/*Бургер меню для маленьких экранов*/
+.navbar {
+    background-color: #0398db;
+}
+.navbar label {
+    color: white;
+    text-align: left;
+}
+.navbar i {
+    font-size: 1.8em;
+}
+.navbar button {
+    margin-left: 8px;
+}
+.navbar .btn {
+    margin-top: 8px;
+}
 .navbar-nav li {
     padding-right: 20px;
 }
 .nav-link {
     font-size: 1.1em !important;
 }
+.menuMobile {
+    font-size: 0.6em;
+}
+.menuMobile .btn {
+    text-align: left;
+    padding-left: 8px;
+}
+/**/
 .fa-stack[data-count]:after{
     position:absolute;
     right:0%;
