--- a/css/main.css
+++ b/css/main.css
@@ -160,7 +160,7 @@ html, body {
 .modal {
     margin-top: 10%;
 }
-.modal a {
+.modal-body a {
     float: left;
     width: 50%;
     white-space: nowrap;
@@ -170,13 +170,14 @@ html, body {
     padding: 0 4px;
     line-height: 26px;
     font-size: 13px;
+    color: white;
 }
 .categoryDetailMain {
     float: left;
     position: relative;
     padding: 10px 10px 10px 62px;
-    background-color: #b3b7bb;
-    border: 1px solid dimgray;
+    background-color: #03a9f4;
+    border-radius: 4px;
     width: 100%;
 }
 .categoryDetailMain .icon {
@@ -187,13 +188,17 @@ html, body {
     width: 50px;
     height: 46px;
     text-align: center;
-    border-right: 1px solid dimgray;
+    background-color: #0398db;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
 }
 .categoryDetailMain .icon i {
     display: inline-block;
     font-size: 20px;
     line-height: 46px;
+    color: white;
 }
+
 .modal .btn {
     margin: 5px;
 }
