--- a/css/main.css
+++ b/css/main.css
@@ -43,15 +43,15 @@ html, body {
 
 .menu_top {
     padding: 20px 0 0 0;
-    vertical-align: middle;
+}
+.menu_top .notice {
+    padding-top: 11px;
+    padding-bottom: 11px;
+    border-right: 1px solid #eeeS;
 }
 .menu_top span {
-    margin-left: 5px;
-    margin-right: 5px;
-}
-.menu_top a {
-    display: inline-block;
-    float: right;
+    margin-left: 3px;
+    margin-right: 3px;
 }
 .menu_top .fa-stack-1x {
     color: dimgray;
@@ -65,19 +65,33 @@ html, body {
     top: 20px;
 }
 .menu_top .profileimg {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    margin-left: 3px;
+    margin-right: 8px;
+}
+.profileimg {
+    position: relative;
+}
+.profileimg img {
     height: 40px;
     width: 40px;
     border-radius: 20px;
-    margin-left: 8px;
-    margin-right: 15px;
+}
+.profileimg span {
+    position: absolute;
+    top:0;
+    right: 0;
+    color: #34ce57;
 }
 .menu_top .btn-info {
     background: white;
     color: black;
     height: 30px;
-    border-radius: 20px;
-    margin-left: 15px;
-    padding-top: 2px;
+    border-radius: 15px;
+    margin-right: 3px;
+    margin-left: 8px;
+    padding-top: 3px;
     padding-bottom: 0;
 }
 .menu_top .btn-danger {
@@ -86,77 +100,7 @@ html, body {
     margin-right: 0;
 }
 /**/
-.blockMenuMain {
-    margin-top: 20px;
-}
-.blockMenuMain .logo {
-    padding: 0;
-}
-.logo img {
-    height: 100%; width: auto;
-}
-.iconNotice {
-    padding: 0;
-}
-.iconNotice .fa-stack-2x {
-    color: #eee;
-}
-.iconNotice .fa-stack-1x {
-    color: dimgray;
-}
-.iconAd {
-    padding: 0;
-    border-right: 1px solid #eee;
-}
-.iconAd .fa-stack-2x {
-    color: #eee;
-}
-.iconAd .fa-stack-1x {
-    color: dimgray;
-}
-.loginMenu {
-    padding: 0px 0px 0px 5px;
-    margin: 0;
-}
-.loginMenu .btn {
-    padding: 0px;
-    width: 90%;
-    height: 80%;
-    border-radius: 12px;
-    background: white;
-    color: #0f6674;
-}
-.profileMenu {
-    padding: 0;
-}
-.profileMenu img {
-    width: 90%;
-    height: 90%;
-}
-.btnLoginMenu1 {
-    padding: 0;
-}
-.btnLoginMenu1 .btn {
-    height: 90%;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-}
-.btnLoginMenu2 {
-    padding: 0;
-}
-.btnLoginMenu2 .btn{
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-}
-.menus {
-    height: 40px;
-}
-
-/**/
-.fa-stack[data-count]:after{
+.menu_top .fa-stack[data-count]:after{
     position:absolute;
     right:0%;
     top:1%;
