Исправил ошибку в цвете

--- a/css/main.css
+++ b/css/main.css
@@ -47,7 +47,7 @@ html, body {
 .menu_top .notice {
     padding-top: 11px;
     padding-bottom: 11px;
-    border-right: 1px solid #eeeS;
+    border-right: 1px solid #eee;
 }
 .menu_top span {
     margin-left: 3px;
