--- a/css/category.css
+++ b/css/category.css
@@ -1,4 +1,4 @@
-/*Блок поиска*/
+/*******************Блок поиска*******************/
 .search_category {
     margin-top: 25px;
     padding-top: 5px;
@@ -8,7 +8,7 @@
     background-color: #0398db;
     border-radius: 4px;
 }
-/*Блок доступных категорий*/
+/********************Блок доступных категорий********************/
 .permiss_category {
     margin-top: 30px;
     margin-bottom: 20px;
@@ -29,7 +29,7 @@
     font-size: 0.7em;
     white-space: nowrap;
 }
-/*Блок фильтров категорий и объявлений из категории*/
+/********************Блок фильтров категорий********************/
 .category_filter {
     background: #0398db;
     border-radius: 4px;
@@ -47,16 +47,21 @@
 .checkSafeTrade {
     margin-top: 15px;
 }
-/**/
+/***************Блок объявлений*********************/
+.ads_main .card {
+    width: 14rem;
+}
+
+/*Разметка блоков под баннерную рекламу*/
 .banner_category_footer {
     margin-top: 30px;
     margin-bottom: 30px;
     text-align: center;
-    background: white;
+    background: #eee;
 }
 .banner_category_left {
     margin-top: 30px;
     margin-bottom: 30px;
     text-align: center;
-    background: white;
+    background: #eee;
 }
