--- a/css/category.css
+++ b/css/category.css
@@ -48,47 +48,65 @@
     margin-top: 15px;
 }
 /***************Блок объявлений*********************/
-.category_ads .col {
-padding: 5px;
+.ads {
+    padding: 10px;
+    overflow: hidden;
 }
-.wrapper {
+.ads a {
+    text-decoration: none;
+}
+.ads a:hover h6 {
+    color: #c82333;
+}
+.ads h6 {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    color: #0398db;
+    margin: 2px 0;
+    font-size: 0.9em;
+}
+.ads span {
+    padding-left: 15px;
+    color: #686868;
+}
+.ads p {
+    padding: 0;
+    margin: 0;
+    color: #686868;
+    font-size: 0.8em;
+}
+.ads .price {
+    color: black;
+    font-size: 0.8em;
+    font-weight: bold;
+}
+.ads .address {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.ads_wrapper {
     width: 205px;
     height: 160px;
-}
-.exmpl {
     overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.exmpl img {
+.ads_wrapper a {
+    display: contents;
+}
+.ads_wrapper a img {
     height: 100%;
     width: auto;
+    overflow: hidden;
 }
 
 
 
 
 /**/
-.category_ads .card {
-    border: none;
-    max-height: 18rem;
-}
-.category_ads .card-body {
-    display: flex;
-    align-items: center;
-    padding: 0;
-    background: #eee;
-
-}
-.category_ads .card-footer {
-    background: white;
-    padding: 15px 0;
-}
-.category_ads .card img {
-    max-height: 100%;
-    width: auto;
-}
 
 /*Разметка блоков под баннерную рекламу*/
 .banner_category_footer {
