--- a/css/category.css
+++ b/css/category.css
@@ -8,6 +8,14 @@
     background-color: #0398db;
     border-radius: 4px;
 }
+.search_category .btn-warning {
+    width: 100%;
+}
+.search_category .col-12 {
+    padding-top: 3px;
+    padding-bottom: 3px;
+}
+
 /********************Блок доступных категорий********************/
 .permiss_category {
     margin-top: 30px;
@@ -75,6 +83,11 @@
     width: 26px;
     height: 26px;
 }
+/*Навигация по страницам внизу экрана*/
+.navigation_pages {
+    padding-top: 50px;
+}
+
 /*Платная услуга для объявлений - VIP*/
 .vip {
     border-radius: 4px;
