--- a/css/global.css
+++ b/css/global.css
@@ -68,6 +68,17 @@ html, body {
     left: 0;
     top: 20px;
 }
+.menu_top .log-in:after {
+    position: absolute;
+    top: 0;
+    right: 0;
+    content: '';
+    width: 16px;
+    height: 16px;
+    border-radius: 8px;
+    border: none;
+    background: #34ce57;
+}
 .menu_top .profileimg {
     padding-top: 15px;
     padding-bottom: 15px;
@@ -104,7 +115,7 @@ html, body {
     margin-right: 0;
 }
 /**/
-.menu_top .fa-stack[data-count]:after{
+.menu_top .has-badge[data-count]:after{
     position:absolute;
     right:0%;
     top:1%;
