Добавил скелеты страниц объявления "Продажа запчастей" и "Продажа  на запчасти"

--- a/css/ads_views.css
+++ b/css/ads_views.css
@@ -27,7 +27,9 @@
     padding-top: 10px;
 }
 /**/
-.ad-description,
+.ad-missing,
+.ad-compatible,
+.ad-specific,
 .ad-description {
     padding-top: 20px;
 }
