--- a/css/main.css
+++ b/css/main.css
@@ -94,7 +94,9 @@
     font-size: 3em;
     padding: 30px 0 0 0;
     display: flex;
+/*
     align-items: start;
+*/
     justify-content: center;
     overflow: hidden;
 }
