--- a/css/global.css
+++ b/css/global.css
@@ -8,7 +8,13 @@ html, body {
 /************************Бургер меню для маленьких экранов************************/
 /**/
 .navbar {
-    background-color: #0398db;
+    background-color: #ffffff;
+}
+
+@media (max-width: 767px) {
+    .navbar {
+        background-color: #0398db;
+    }
 }
 .navbar label {
     color: white;
