--- a/css/global.css
+++ b/css/global.css
@@ -16,6 +16,7 @@ html, body {
         background-color: #0398db;
     }
 }
+/*
 .navbar label {
     color: white;
     text-align: left;
@@ -42,6 +43,8 @@ html, body {
     text-align: left;
     padding-left: 8px;
 }
+
+ */
 /**/
 /************************Блок верхнего меню************************/
 /**/
