--- a/css/global.css
+++ b/css/global.css
@@ -10,6 +10,9 @@ html, body {
 .menutop {
     background-color: #ffffff;
 }
+.menutop a {
+    position: relative;
+}
 /* Кнопка Войти/Выйти */
 .menutop .btn-info {
     background: white;
@@ -40,7 +43,8 @@ html, body {
     border: none;
     background: #34ce57;
 }
-/* Лэйбл наличия количества уведомлений */
+/* Лэйбл (Badge) наличия количества уведомлений */
+/*
 .menutop .has-badge[data-count]:after {
     position:absolute;
     right:0%;
@@ -55,6 +59,15 @@ html, body {
     text-align:center;
     min-width:2em;
     font-weight:bold;
+}
+*/
+.menutop .badge {
+    position:absolute;
+    right:0%;
+    background:rgba(255,0,0,.85);
+    top:1%;
+    font-size: 10px;
+    font-weight: 300;
 }
 .menutop .fa-stack-1x {
     color: dimgray;
@@ -104,7 +117,7 @@ html, body {
 /************************Блок верхнего меню************************/
 /**/
 /*Переделанное верхнее меню для всех страниц*/
-
+/*
 .menu_top {
     padding: 20px 0 0 0;
 }
@@ -177,7 +190,7 @@ html, body {
     padding-right: 15px;
     margin-right: 0;
 }
-/**/
+
 .menu_top .has-badge[data-count]:after{
     position:absolute;
     right:0%;
@@ -193,6 +206,7 @@ html, body {
     min-width:2em;
     font-weight:bold;
 }
+*/
 /**/
 /************************ Общий контент для всех страниц ************************/
 /**/
