--- a/css/add_ad.css
+++ b/css/add_ad.css
@@ -18,10 +18,34 @@
     font-size: 20px;
 }
 
-
+/*******************  *******************/
 .tech-options .btn {
     font-size: 0.75rem;
 }
 .tech-options .btn-group {
     width: 100%;
 }
+/*******************  *******************/
+.upload-images {
+    position: relative;
+}
+.remove-image {
+    position: absolute;
+    right: 10%;
+    top: 5%;
+    background-color: #ffffff;
+    height: 20px;
+    width: 20px;
+    cursor: pointer;
+}
+.remove-image .fa {
+    font-size: 20px;
+}
+.upload-new {
+    width: 110px;
+    height: 110px;
+
+}
+
+
+/*******************  *******************/
