--- a/css/add_ad.css
+++ b/css/add_ad.css
@@ -44,8 +44,15 @@
 .upload-new {
     width: 110px;
     height: 110px;
-
 }
-
-
+.upload-new .row {
+    height: 100%;
+}
+.upload-new .fa {
+    font-size: 50px;
+}
+.upload-new a {
+    width: 100%;
+    height: 100%;
+}
 /*******************  *******************/
